# something-releaser

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Cargo.toml  NOTICE  README.md  action.yml  build.rs  generate.js  lib.js  lib.mjs  package-lock.json  package.json  schema.yml  simple-http.mjs  temp.mjs  tsconfig.eslint.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  test.yml
__tests__/commands/: publish-to-maven.test.ts
__tests__/files/: groovy.test.ts  json.test.ts  properties.test.ts
__tests__/publish-environment/: gradle-intellij.test.ts  gradle-maven.test.ts  gradle-plugin-portal.test.ts  gradle-sigining.test.ts
__tests__/steps/: git-user.test.ts
__tests__/test-utils/: process.ts  simple-http.ts
__tests__/utils/: asPair.test.ts  git-client.test.ts  version.test.ts
__tests__/version-changer/: gradle-properties.test.ts  npm-package-json.test.ts  regex-pattern.test.ts  util.ts
__tests__resources/gpg/: README.txt
command/: Cargo.toml
command/src/: ext.rs  logger.rs  main.rs  running_group.rs
command/src/commands/: actions.rs  changelog.rs  publish.rs  set_environments.rs  update_version.rs  update_version_next.rs
command/src/helpers/: mod.rs  properties.rs
command/src/helpers/tests/: properties.rs
command/src/release_system/: mod.rs  publisher.rs  version_changer.rs
command/src/release_system/command_builder/: gradle.rs  mod.rs
command/templates/: gradle-maven.init.gradle  intellij-publish.init.gradle  release_notes.init.gradle
create_release/: action.yml  main.js
path-posix/: file-util  generate-changelog  get-version  gh-add-path  gh-error  gh-export-variable  gh-get-input  gh-get-input-boolean  gh-group-end  gh-group-start  gh-notice  gh-set-output  gh-set-secret  gh-warning  prepare-gradle-intellij  prepare-gradle-maven  prepare-gradle-plugin-portal  prepare-gradle-signing  publish-to-curse-forge  publish-to-maven  send-discord  send-tweet  set-git-user  set-version  something-releaser  version-alpha  version-beta  version-candidate  version-format  version-get-channel  version-major  version-minor  version-next  version-patch  version-set-channel  version-snapshot  version-stable  version-unsnapshot
path-win/: file-util  file-util.cmd  file-util.ps1  generate-changelog  generate-changelog.cmd  generate-changelog.ps1  get-version  get-version.cmd  get-version.ps1  gh-add-path  gh-add-path.cmd  gh-add-path.ps1  gh-error  gh-error.cmd  gh-error.ps1  gh-export-variable  gh-export-variable.cmd  gh-export-variable.ps1  gh-get-input  gh-get-input-boolean  gh-get-input-boolean.cmd  gh-get-input-boolean.ps1  gh-get-input.cmd  gh-get-input.ps1  gh-group-end  gh-group-end.cmd  gh-group-end.ps1  gh-group-start  gh-group-start.cmd  gh-group-start.ps1  gh-notice  gh-notice.cmd  gh-notice.ps1  gh-set-output  gh-set-output.cmd  gh-set-output.ps1  gh-set-secret  gh-set-secret.cmd  gh-set-secret.ps1  gh-warning  (+74 more)
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
publish/: action.yml  main.js
scripts/: build.js  generate-all.js  generate-bins.js  generate-env-ts-json.js  generate-sequence-ts.js  generate.js  install.js  platform.js
set_user/: action.yml  main.js
shell-tests/: set-git-user.bats  version-alpha.bats  version-beta.bats  version-candidate.bats  version-format.bats  version-get-channel.bats  version-major.bats  version-minor.bats  version-next.bats  version-patch.bats  version-set-channel.bats  version-snapshot.bats  version-stable.bats  version-unsnapshot.bats
src/: command.ts  commands.rs  env.rs  env.ts  env.yml  ext.rs  github_actions_utilities.rs  macros.rs  main.rs  main.ts  types.ts  utils.rs  utils.ts  version.rs  version_commands.rs  version_utilities.rs
src/commands/: actions.rs  build.rs  changelog.rs  file-util.ts  git-user.ts  github-commands.ts  gradle-intellij.ts  gradle-maven.ts  gradle-plugin-portal.ts  gradle-signing.ts  gradle_intellij.rs  gradle_maven.rs  gradle_plugin_portal.rs  gradle_signing.rs  publish-to-curse-forge.ts  publish-to-maven.ts  publish.rs  publish_to_curse_forge.rs  send-discord.ts  send-tweet.ts  send_discord.rs  tests.rs  update_version.rs  update_version_next.rs  version-commands.ts
src/files/: groovy.ts  json.ts  properties.ts
src/helpers/: git.rs  gradle-wrapper.rs  mod.rs
src/publish-environment/: gradle-intellij.ts  gradle-maven.ts  (+2 more)
templates/: gradle-maven.init.gradle
verup/: action.yml  main.js  main.mjs
verup_next/: action.yml  main.js  main.mjs
(+39 files in other folders)
