[package]
name = "something-releaser"
version = "3.0.4-SNAPSHOT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "fs", "io-util", "io-std"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4"] }
home = "0.5.12"
pretty_env_logger = "0.5.0"
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["multipart", "stream", "rustls", "json"], default-features = false }
url = { version = "2.5.0", features = ["serde"] }
cargo-edit = { version = "0.13.9", default-features = false, features = ["set-version"] }
cargo_metadata = "0.23.1"
log = { version = "0.4.29", features = [] }
dunce = "1.0.4"
toml_edit = "0.23.10"
toml = "0.9.12"

[dev-dependencies]
httptest = "0.16.4"
tempfile = "3.10.1"
tokio = { version = "1.52.1", features = ["process"] }
