[package]
name = "something-releaser"
version = "0.1.0"
authors = ["anatawa12 <anatawa12@icloud.com>"]
edition = "2018"

license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
url = "2.2"
log = { version =  "0.4", features = ["std"] }
chrono = "0.4"
regex = "1"
lazy-regex = "2"
git2 = "0.13"
html-escape = "0.2"
itertools = "0.10"
async-trait = "0.1"
home = "0.5.3"
tempfile = "3"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
libz-sys = { version = "1", default-features = false, features = ["static"] }
openssl-sys = { version = "0", default-features = false, features = ["vendored"] }
actions-core = "0.0.2"
dialoguer = "0.8"
sodiumoxide = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.13"
serde_yaml = "0.8"

[dependencies.clap]
version = "= 3.0.0-beta.2"
features = [
    "color",
]
